--- a/style.css
+++ b/style.css
@@ -2780,11 +2780,16 @@ BREAKPOINTS:
     width: 48px;
     height: 48px;
     flex-shrink: 0;
+    border-radius: 50%;
+    overflow: hidden;
 }
 
-.analyst-avatar svg {
+.analyst-photo {
     width: 100%;
     height: 100%;
+    object-fit: cover;
+}
+    object-fit: cover;
 }
 
 .analyst-info {
