--- a/style.css
+++ b/style.css
@@ -804,9 +804,12 @@ a {
 }
 
 .index-card.active {
+    background: var(--paper-dark);
     border-left: 3px solid var(--burgundy);
-    margin-left: -3px;
-    padding-left: calc(var(--md) - 3px);
+    margin: 0 calc(var(--md) * -1);
+    margin-left: calc(var(--md) * -1 - 3px);
+    padding-left: calc(var(--md) - 0px);
+    padding-right: var(--md);
 }
 
 .index-card.active .card-label {
@@ -817,7 +820,7 @@ a {
     font-size: 0.7rem;
     font-weight: 600;
     letter-spacing: 0.08em;
-    color: var(--teal);
+    color: var(--burgundy);
     display: block;
     margin-bottom: var(--xs);
 }
