--- a/style.css
+++ b/style.css
@@ -83,14 +83,37 @@ a {
     padding-top: 0; /* Handled by editorial-grid position */
 }
 
-/* Center content on very wide screens */
+/* Wide screens - expand container for editorial grid */
 @media (min-width: 1500px) {
     .container {
-        padding: var(--lg) calc((100vw - 1400px) / 2 + var(--xl));
+        max-width: 1600px;
+        padding: var(--lg) var(--xl);
     }
     
     .header-fixed {
-        padding: 0 calc((100vw - 1400px) / 2 + var(--xl));
+        padding-left: calc((100vw - 1600px) / 2 + var(--xl));
+        padding-right: calc((100vw - 1600px) / 2 + var(--xl));
+    }
+    
+    .header-fixed .masthead,
+    .header-fixed .section-nav {
+        max-width: 1600px;
+    }
+}
+
+@media (min-width: 1800px) {
+    .container {
+        max-width: 1800px;
+    }
+    
+    .header-fixed {
+        padding-left: calc((100vw - 1800px) / 2 + var(--xl));
+        padding-right: calc((100vw - 1800px) / 2 + var(--xl));
+    }
+    
+    .header-fixed .masthead,
+    .header-fixed .section-nav {
+        max-width: 1800px;
     }
 }
 
